Fix compile problem