@@ -20,7 +20,7 @@ public class TerminologyLookup {
     private static final FHIRTermService TERMINOLOGY_SEVICE = FHIRTermService.getInstance();
     private static TerminologyLookup termInstance;
     static Map<String, String> alternativeCodingSystemMapping =
-        java.util.Map.of("v2-0005", "v3-Race", "CDCREC", "v3-Race");
+        ImmutableMap.of("v2-0005", "v3-Race", "CDCREC", "v3-Race");
      private TerminologyLookup() {
     }
 
